primer actualiz del 22 feb 2019

--- a/about-us.html
+++ b/about-us.html
@@ -34,7 +34,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
                         <div class="top-number">
-                            <p style="color: #333"><a href="tel:013292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  01 (52) 329 298 2527
+                            <p style="color: #333"><a href="tel:013292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i> +52(329)2982527
                                 <a href="principal" style="color:  #71bc56"> <strong> : : English</strong></a>
                               </p>
                         </div>
@@ -62,7 +62,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <!--<a class="navbar-brand" href="index"><img src="images/AlbaLogo_2.png" alt="logo" width="130" style="margin-bottom: 10px"></a>-->
+                    <a class="navbar-brand" href="index"><img src="images/AlbaLogo_2.png" alt="logo" width="130" style="margin-bottom: 10px"></a>
                 </div>
 
                 <div class="collapse navbar-collapse navbar-right">
@@ -178,8 +178,7 @@
                             <img src="images/doctoraAlba2.jpg" alt="">
                         </div>
                         <div class="team-content">
-                            <h4>C.D. Alba Nydia Aguilar Ibarra</h4>
-                            <span class="desg">Especialidad en Endodoncia</span>
+                            <h4>C.D. Alba Nydia Aguilar Ibarra</h4>                           
                         </div>
                     </div>
                 </div>
@@ -257,7 +256,7 @@
                             <div class="col-md-3 col-sm-6">
                                     <div class="widget">                                    
                                             <h3>DENTISTA BUCERIAS</h3>
-                                            <p>Avenida Pacifico 57 local 5 Centro de Bucerias entre calle Cuauhtémoc e Hidalgo <br> Bucerias Nayarit, México. <br> Teléfono 01  329 29 82527 <br> dentistabucerias@gmail.com</p>                                    
+                                            <p>Avenida Pacifico 57 local 5 Centro de Bucerias entre calle Cuauhtémoc e Hidalgo <br> Bucerias Nayarit, México. <br> Teléfono +52(329)2982527 <br> dentistabucerias@gmail.com</p>                                    
                                         </div>
                                 </div>
                                 <!--/.col-md-3--> 
