--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
                         <div class="top-number">
-                            <p style="color: #333"><a href="tel:013292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  01 (52) 329 298 2527
+                            <p style="color: #333"><a href="tel:013292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i> +52(329)2982527
                               <a href="principal" style="color:  #71bc56"> <strong> : : English</strong></a>
                             </p>
                         </div>
@@ -64,7 +64,7 @@
                         <span class="icon-bar"></span> 
                     </button>
                     <!--<a class="navbar-brand" href="index"><img src="images/AlbaLogo_2.png" alt="logo" width="130" style="margin-bottom: 10px"></a>-->
-                    <a class="navbar-brand" href="index"><img src="" alt="logo" width="130" style="margin-bottom: 10px"></a>
+                    <!--<a class="navbar-brand" href=""><img src="" alt="logo" width="130"></a>-->
                 </div>
 
                 <div class="collapse navbar-collapse navbar-right">
@@ -177,25 +177,6 @@
                     </div>
                 </div>
                 <!--/.item yo agregué aquí-->
-
-                <div class="item" style="background-image: url(images/slider/bannerDental4.jpg)">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-7">
-                                <div class="carousel-content">
-                                    <h1 class="animation animated-item-1" >¡Dientes más blancos... nunca antes fue tan facíl!</h1>
-                                    <div class="animation animated-item-2">
-                                        El blanqueamiento consiste en aclarar el tono de los dientes, mejorando su apariencia y acentuando su belleza natural, para conseguir una sonrisa más atractiva.
-                                    </div>
-                                    <a class="btn-slide white animation animated-item-3" href="services">Servicios</a>
-                                    <a class="btn-slide animation animated-item-3" href="contact-us">Solicita una cita</a>
-                                </div>
-                            </div>
-
-
-                        </div>
-                    </div>
-                </div>
 
             </div>
             <!--/.carousel-inner-->
@@ -543,7 +524,7 @@
                             <div class="col-md-3 col-sm-6">
                                     <div class="widget">                                    
                                             <h3>DENTISTA BUCERIAS</h3>
-                                            <p>Avenida Pacifico 57 local 5 Centro de Bucerias entre calle Cuauhtémoc e Hidalgo <br> Bucerias Nayarit, México. <br> Teléfono 01  329 29 82527 <br> dentistabucerias@gmail.com</p>                                    
+                                            <p>Avenida Pacifico 57 local 5 Centro de Bucerias entre calle Cuauhtémoc e Hidalgo <br> Bucerias Nayarit, México. <br> Teléfono +52(329)2982527<br> dentistabucerias@gmail.com</p>                                    
                                         </div>
                             </div>
                             <!--/.col-md-3-->
