--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
                         <div class="top-number">
-                            <p style="color: #333"><a href="tel:013292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  01 (52) 329 298 2527
+                            <p style="color: #333"><a href="tel:013292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  +52(329)2982527
                                 <a href="principal" style="color:  #71bc56"> <strong> : : English</strong></a>
                               </p>
                         </div>
@@ -97,10 +97,10 @@
 
 
             <ul class="portfolio-filter text-center">
-                <li><a class="btn btn-default active" href="#" data-filter="*">Ver todo</a></li>
+                <li><a class="btn btn-default active" href="#" data-filter="*">Todas</a></li>
                 <li><a class="btn btn-default" href="#" data-filter=".limpieza">Limpiezas</a></li>
-                <li><a class="btn btn-default" href="#" data-filter=".endodoncia">Endodoncias</a></li>
-                <li><a class="btn btn-default" href="#" data-filter=".extracciones">Extracciones</a></li>
+                <li><a class="btn btn-default" href="#" data-filter=".dentaduras">Dentaduras</a></li>
+                <li><a class="btn btn-default" href="#" data-filter=".coronas">Coronas Porcelana</a></li>
             </ul>
             <!--/#portfolio-filter-->
 
@@ -118,7 +118,7 @@
                     </div>
                     <!--/.portfolio-item-->
 
-                    <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                    <div class="portfolio-item dentaduras col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
                             <img class="img-responsive" src="images/portfolio/patient1-before.JPG" alt="">
                             <div class="overlay">
@@ -130,7 +130,7 @@
                     </div>
                     <!--/.portfolio-item-->
 
-                    <div class="portfolio-item limpieza endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                    <div class="portfolio-item dentaduras col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
                             <img class="img-responsive" src="images/portfolio/patient1-after.JPG" alt="">
                             <div class="overlay">
@@ -142,7 +142,7 @@
                     </div>
                     <!--/.portfolio-item-->
 
-                    <div class="portfolio-item extracciones endodoncia apps col-xs-12 col-sm-4 col-md-3 single-work">
+                    <div class="portfolio-item limpieza apps col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
                             <img class="img-responsive" src="images/portfolio/patient2.JPG" alt="">
                             <div class="overlay">
@@ -154,7 +154,7 @@
                     </div>
                     <!--/.portfolio-item-->
 
-                    <div class="portfolio-item limpieza endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                    <div class="portfolio-item limpieza dentaduras col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
                             <img class="img-responsive" src="images/portfolio/patient3.JPG" alt="">
                             <div class="overlay">
@@ -166,7 +166,7 @@
                     </div>
                     <!--/.portfolio-item-->
 
-                    <div class="portfolio-item extracciones col-xs-12 col-sm-4 col-md-3 single-work">
+                    <div class="portfolio-item coronas col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
                             <img class="img-responsive" src="images/portfolio/patient5-before.JPG" alt="">
                             <div class="overlay">
@@ -178,7 +178,7 @@
                     </div>
                     <!--/.portfolio-item-->
 
-                    <div class="portfolio-item limpieza col-xs-12 col-sm-4 col-md-3 single-work">
+                    <div class="portfolio-item coronas col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
                             <img class="img-responsive" src="images/portfolio/patient5-.JPG" alt="">
                             <div class="overlay">
@@ -190,7 +190,7 @@
                     </div>
                     <!--/.portfolio-item-->
 
-                    <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                    <div class="portfolio-item dentaduras col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
                             <img class="img-responsive" src="images/portfolio/patient5.JPG" alt="">
                             <div class="overlay">
@@ -202,7 +202,7 @@
                     </div>
                     <!--/.portfolio-item-->
 
-                    <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                    <div class="portfolio-item dentaduras col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
                             <img class="img-responsive" src="images/portfolio/galeria01.JPG" alt="">
                             <div class="overlay">
@@ -214,7 +214,7 @@
                     </div>
                     <!--/.portfolio-item-->
 
-                    <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                    <div class="portfolio-item dentaduras col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
                             <img class="img-responsive" src="images/portfolio/galeria02.JPG" alt="">
                             <div class="overlay">
@@ -226,7 +226,7 @@
                     </div>
                     <!--/.portfolio-item-->
 
-                    <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                    <div class="portfolio-item dentaduras col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
                             <img class="img-responsive" src="images/portfolio/galeria03.JPG" alt="">
                             <div class="overlay">
@@ -238,7 +238,7 @@
                     </div>
                     <!--/.portfolio-item-->
 
-                    <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                    <div class="portfolio-item dentaduras col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
                             <img class="img-responsive" src="images/portfolio/galeria04.JPG" alt="">
                             <div class="overlay">
@@ -250,7 +250,7 @@
                     </div>
                     <!--/.portfolio-item-->
 
-                    <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                    <div class="portfolio-item dentaduras col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
                             <img class="img-responsive" src="images/portfolio/galeria05.JPG" alt="">
                             <div class="overlay">
@@ -261,7 +261,7 @@
                         </div>
                     </div>
                     <!--/.portfolio-item-->   
-                    <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                    <div class="portfolio-item limpieza col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
                             <img class="img-responsive" src="images/portfolio/patient4.JPG" alt="">
                             <div class="overlay">
@@ -272,7 +272,7 @@
                         </div>
                     </div>
                     <!--/.portfolio-item-->
-                    <div class="portfolio-item endodoncia col-xs-12 col-sm-4 col-md-3 single-work">
+                    <div class="portfolio-item coronas col-xs-12 col-sm-4 col-md-3 single-work">
                         <div class="recent-work-wrap">
                             <img class="img-responsive" src="images/portfolio/patient0.JPG" alt="">
                             <div class="overlay">
@@ -302,7 +302,7 @@
                             <div class="col-md-3 col-sm-6">
                                 <div class="widget">                                    
                                     <h3>DENTISTA BUCERIAS</h3>
-                                    <p>Avenida Pacifico 57 local 5 Centro de Bucerias entre calle Cuauhtémoc e Hidalgo <br> Bucerias Nayarit, México. <br> Teléfono 01  329 29 82527 <br> dentistabucerias@gmail.com</p>                                    
+                                    <p>Avenida Pacifico 57 local 5 Centro de Bucerias entre calle Cuauhtémoc e Hidalgo <br> Bucerias Nayarit, México. <br> Teléfono +52(329)2982527 <br> dentistabucerias@gmail.com</p>                                    
                                 </div>
                             </div>
                             <!--/.col-md-3-->
