--- a/principal.html
+++ b/principal.html
@@ -35,7 +35,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
                         <div class="top-number">
-                            <p style="color: #333"><a href="tel:001523292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  001+ (52) 329 298 2527
+                            <p style="color: #333"><a href="tel:001+523292982527" style="color: #333"></a> <i class="fa fa-phone-square"></i>  001+52(329)2982527
                                 <a href="index" style="color:  #71bc56"> <strong> : : Español</strong></a>
                               </p>
                         </div>
@@ -63,7 +63,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span> 
                     </button>
-                    <a class="navbar-brand" href="principal"><img src="images/AlbaLogo_2.png" alt="logo" width="130" style="margin-bottom: 10px"></a>
+                    <!--<a class="navbar-brand" href="principal"><img src="images/AlbaLogo_2.png" alt="logo" width="130" style="margin-bottom: 10px"></a>-->
                 </div>
 
                 <div class="collapse navbar-collapse navbar-right">
@@ -94,12 +94,12 @@
             </ol> 
             <div class="carousel-inner">
 
-                <div class="item active" style="background-image: url(images/slider/bannerDental1.jpg)">
+                <div class="item active" style="background-image: url(images/slider/bannerDental1_1.jpg)">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-7">
                                 <div class="carousel-content">
-                                    <h1 class="animation animated-item-1" style="color: #333;">We care about your smile</h1>
+                                    <h1 class="animation animated-item-1" style="color: #333;">We care about <br> your smile</h1>
                                     <div class="animation animated-item-2" style="color: #333;">
                                        Bucerias Dentist is an accessible dental clinic in Bahía de Banderas and Puerto Vallarta that provides professional attention in the fields of aesthetics, conservation and dental reconstruction.
                                     </div>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <!--/.item yo agregué aquí-->
-                <div class="item" style="background-image: url(images/slider/bannerDental4.jpg)">
+                <div class="item" style="background-image: url(images/slider/bannerDental3.JPG)">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-7">
@@ -497,7 +497,7 @@
                             <div class="col-md-3 col-sm-6">
                                     <div class="widget">                                    
                                             <h3>BUCERIAS DENTIST</h3>
-                                            <p>Pacifico street 57 Bucerias downtown<br> Bucerias Nayarit, México. <br> Phone 001+ (52) 329 298 2527 <br> dentistabucerias@gmail.com</p>                                    
+                                            <p>Pacifico street 57 Bucerias downtown<br> Bucerias Nayarit, México. <br> Phone 001+52(329)2982527 <br> dentistabucerias@gmail.com</p>                                    
                                         </div>
                             </div>
                             <!--/.col-md-3-->
