--- a/principal.html
+++ b/principal.html
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <!--/.item yo agregué aquí-->
-                <div class="item" style="background-image: url(images/slider/bannerDental3.JPG)">
+                <div class="item" style="background-image: url(images/slider/bannerDental3.jpg)">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-7">
